[project]
name = "comfyui-yunlan"
description = "一个功能丰富的ComfyUI自定义节点集合，专注于AI对话和智能图像处理功能"
version = "1.0.0"
license = {text = "MIT"}

authors = [
    {name = "yunlan5423", email = "yunlan5423@example.com"}
]

readme = "README.md"
requires-python = ">=3.7"

keywords = ["comfyui", "ai", "image-processing", "custom-nodes", "yunlan"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "openai>=1.0.0",
    "requests>=2.25.0",
    "Pillow>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yunlan5423/comfyui_yunlan"
Repository = "https://github.com/yunlan5423/comfyui_yunlan"
Issues = "https://github.com/yunlan5423/comfyui_yunlan/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nodes", "js"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.js", "*.md", "*.txt"]
